--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,16 @@ version: 2.1
 orbs:
   gradle: circleci/gradle@2.1.0
 
+executors:
+  my-executor:
+    docker:
+      - image: circleci/openjdk:11.0-jdk-buster-browsers
+
 workflows:
   test-with-custom-reports:
     jobs:
       - gradle/test:
+          executor: my-executor
           test_command: cleanTest test
           test_results_path: build/test-results/
           
