--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 executors:
   my-executor:
     docker:
-      - image: circleci/openjdk:11.0-jdk-buster-browsers
+      - image: circleci/openjdk:11.0.7-buster-browsers-legacy
 
 workflows:
   test-with-custom-reports:
